--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,3 +5,7 @@ JWT_SECRET="jwt_secret"
 SENDER_EMAIL="sender_email"
 PORT=5000
 MONGO_URI="mongo_uri"
+CORS_ORIGIN=http://localhost:5173
+GOOGLE_CLIENT_ID="google_client_id"
+GOOGLE_CLIENT_SECRET="google_client_secret"
+GOOGLE_REDIRECT_URI=http://localhost:5001/api/auth/google/callback
