--- a/package.json
+++ b/package.json
@@ -8,5 +8,10 @@
     "@eslint/js": "^9.34.0",
     "eslint-linter-browserify": "^9.34.0",
     "espree": "^10.4.0"
+  },
+  "scripts": {
+    "start": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   }
 }
